--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,6 +1,8 @@
 body{
     background-color: black;
+    font-family: var(--font-dm-sans);
 }
+
 h1{
     color: aliceblue;
 }
@@ -40,7 +42,6 @@ h1{
     text-decoration: none;
     font-weight: 600;
     font-size:14px;
-    font-family: "DM Sans", sans-serif;
 }
 .logo img{
     width: 80px;
@@ -86,7 +87,6 @@ h1{
     border: none;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -126,7 +126,6 @@ h1{
 .section-playlist_content .text{
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 .section-playlist_content .title{
     font-weight: 700;
@@ -145,7 +144,6 @@ h1{
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -181,6 +179,45 @@ h1{
     border-radius: 20px;
 }
 
+/*FOOTER*/
+.disclaimer-premium {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #ae2896, #509bf5);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+}
+.disclaimer-premium .text {
+    flex-shrink: 0;
+}
+.disclaimer-premium .disclaimer-premium__title {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.disclaimer-premium button {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
 
 
 
