--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,55 +1,53 @@
 body{
-    background-color: black;
+    background-color: #000;
     font-family: var(--font-dm-sans);
 }
 
-h1{
-    color: aliceblue;
-}
-
 .sidebar{
-    position: fixed;
-    top: 0;
+    position:fixed;
+    top:0;
     left:0;
     bottom:0;
-    padding: 12px;
-    width: 300px;
-}
-.sidebar_navigation{
-    background-color: #121212;
-    border-radius: 8px;
-    padding: 16px 0 0 16px;
+    padding:12px;
+    width:300px;
 }
 
-.sidebar_navigation .logo{
-    background: #121212;
-    display: flex;
-    border-radius: 8px;
+.sidebar__navigation{
+    background-color: #121212;
+    border-radius:8px;
     padding:16px 0 0 16px;
+}
+
+.logo{
+    background: #121212;
+    display:flex;
+    border-radius:8px ;
+    padding:16px 0 0 16px;
+}
+
+.sidebar__navigation .logo img{
+    width:80px;
 }
 
 .sidebar nav ul{
     margin-top: 20px;
-    padding: 0 20px 10px 20px;
+    padding:0 20px 10px 20px;
 }
 
 .sidebar ul li{
-    padding: 10px 0px;
+    padding: 10px 0;
 }
 
 .sidebar nav ul li a{
-    color:#b3b3b3;
+    color: #b3b3b3;
     text-decoration: none;
     font-weight: 600;
-    font-size:14px;
-}
-.logo img{
-    width: 80px;
+    font-size: 14px;
 }
 
 .library{
-    background-color: #121212;
-    border-radius: 8px;
+    background-color:#121212;
+    border-radius:8px;
     display: flex; 
     /* **display:flex** 
     orienta o código, nesse caso altera a posição e direcionamento 
@@ -63,123 +61,125 @@ h1{
     /* **flex-direction:column**
     deixa flexivel em uma determinada direção, nesse caso foi colocado como colunas
     */
-    padding: 4px 8px;
-    color: #b3b3b3;
+    padding:4px 8px;
+    color:#b3b3b3;
     font-weight: 600;
-    font-size: 14px;
+    font-size:14px;
     margin-top: 10px;
 }
 
-.library .library_content{
-    display: flex;
+.library .library__content{
+    display:flex;
     justify-content: space-between;
 }
 
-.library .library_button{
-    display: flex;
+.library .library__button{
+    display:flex;
     margin-right: 10px;
-    color: #b3b3b3;
+    color:#b3b3b3;
     background-color: transparent; 
     /*Ela permite que você especifique como o texto deve ser transformado 
     em relação à capitalização das letras. 
     Podem possuir os seguintes tipos: none, capitalize, uppercase, lowercase, full-width.
     */
-    border: none;
+    border:0px;
     font-size: 14px;
     font-weight: 700;
     text-align: center;
     text-decoration: none;
     text-transform: none;
-    padding: 20px 10px;
+    padding:20px 10px;
 }
 
-.library .library_button .fa{
-    font-size: 20px;
-    margin-right: 10px;
+.library .library__button .fa{
+    font-size:20px;
     font-weight: 300;
-    padding-right: 8px;
+    color:#b3b3b3;
+    margin-right: 10px;
+    padding-right:8px;
 }
 
-.library .library_content .fa-plus{
+.library .library__content .fa-plus{
     margin: 24px 10px;
 }
 
 .section-playlist{
-    display: flex;
-    align-items:flex-start;
+    display:flex;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 20px;/*espaço entre as propriedades*/
     background-color: #242424;
-    color: #b3b3b3;
+    color:#b3b3b3;
     font-weight: 600;
     font-size: 14px;
     margin: 8px 0;
-    padding: 16px 20px;
-    border-radius: 20px;
+    padding:16px 20px;
+    border-radius:10px;
 }
 
-.section-playlist .section-playlist_content{
-    display: flex;
+.section-playlist .section-playlist__content{
+    display:flex;
     flex-direction: column;
 }
 
-.section-playlist_content .text{
-    padding-bottom: 14px;
-    color: #fff;
+.section-playlist__content .text{
+    padding-bottom:14px;
+    color:#FFF;
 }
-.section-playlist_content .title{
+
+.section-playlist__content .title{
     font-weight: 700;
 }
-.section-playlist_content .subtitle{
+
+.section-playlist__content .subtitle{
     font-weight: 500;
     font-size: 12px;
 }
 
-.section-playlist_content .section-playlist_button{
+.section-playlist__content .section-playlist__button{
     display: flex;
     justify-content: center;
-    background-color: #fff;
-    border: none;
-    color: #000;
+    background-color: #FFF;
+    color:#000;
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    text-decoration: none;
+    text-decoration:none;
     text-transform: none;
-    padding: 10px;
+    padding:10px;
     margin-top: 12px;
+    border:0;
     width: 113px;
 }
 
 .sidebar .cookies{
-    margin: 25px 20px;
+    margin:25px 20px;
 }
 
 .sidebar .cookies a{
-    text-decoration: none;
-    color: #b3b3b3;
+    color:#b3b3b3;
     font-weight: 500;
-    font-size: 10px;
+    font-size:10px;
+    text-decoration: none;
 }
 
 .sidebar .cookies a:hover{
     text-decoration: underline;
 }
 
-.languages .languages_button{
+.languages .languages__button{
     align-items: center;
     background-color: transparent;
     border: 1px solid #878787;
-    color:#fff;
+    color:#FFF;
     font-weight: bold;
-    cursor: pointer;
+    cursor:pointer;
     width: 170px;
-    margin: 8px;
-    padding: 8px;
-    border-radius: 20px;
+    margin:8px;
+    padding:8px;
+    border-radius:20px;
 }
 
-/*FOOTER*/
 .disclaimer-premium {
     position: fixed;
     bottom: 0;
@@ -191,7 +191,7 @@ h1{
     justify-content: space-between;
 }
 .disclaimer-premium .text {
-    flex-shrink: 0;
+   flex-shrink: 0;
 }
 .disclaimer-premium .disclaimer-premium__title {
     color: #ffffff;
@@ -218,16 +218,3 @@ h1{
     cursor: pointer;
     flex-shrink: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
