--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -349,6 +349,12 @@ footer.disclaimer-premium {
     }
 }
 
+@media screen and (max-width: 500px) {
+    .cards:hover{
+        box-shadow: 0px 0px #b3b3b3 !important;
+    }
+}
+
 @media screen and (max-width: 458px) {
     .header__search {
         width: 216px;
